update entropy normalized calculation

--- a/analysis/entropy_kshell.ipynb
+++ b/analysis/entropy_kshell.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "4                      1                     1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,8 @@
     "        proportions = { cat:0. for cat in cat_set }\n",
     "        for cat,prop in zip(cats, partial):\n",
     "            proportions[cat]+=prop\n",
-    "        ent = -sum([ p*np.log(p) for p in proportions.values() ])/np.log(len(cat_set))\n",
+    "        #ent = -sum([ p*np.log(p) for p in proportions.values() ])/np.log(len(cat_set))\n",
+    "        ent = -sum([ p*np.log(p) for p in proportions.values() ])/np.log(2)\n",
     "        #print(ent)\n",
     "        entropy_dic[n] = ent\n",
     "        #break\n",
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +416,7 @@
        "ALJUNIED                    0.536421  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +445,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +469,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +654,7 @@
        "4               0.625371            0.437139             0.536421  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
