--- a/analysis/entropy_mapequation.ipynb
+++ b/analysis/entropy_mapequation.ipynb
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        "(303, 30043)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "(303, 30043)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,6 +441,7 @@
     "    for n, v in zip(df[\"node\"].tolist(), df[col].tolist()):\n",
     "        node_dic[n] = v\n",
     "    entropy_dic = {}\n",
+    "    number_of_all_community = len(list(set(df[col].tolist())))\n",
     "    for n in dg.nodes():\n",
     "        nb = None\n",
     "        if direction==\"out\":\n",
@@ -462,7 +463,8 @@
     "        proportions = { cat:0. for cat in cat_set }\n",
     "        for cat,prop in zip(cats, partial):\n",
     "            proportions[cat]+=prop\n",
-    "        ent = -sum([ p*np.log(p) for p in proportions.values() ])/np.log(len(cat_set))\n",
+    "        #ent = -sum([ p*np.log(p) for p in proportions.values() ])/np.log(len(cat_set))\n",
+    "        ent = -sum([ p*np.log(p) for p in proportions.values() ])/np.log(number_of_all_community)\n",
     "        #print(ent)\n",
     "        entropy_dic[n] = ent\n",
     "        #break\n",
@@ -485,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +567,7 @@
        "4        TAMPINES WEST                1                2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -623,31 +625,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>ADMIRALTY</th>\n",
-       "      <td>0.364968</td>\n",
-       "      <td>0.471079</td>\n",
-       "      <td>0.390905</td>\n",
-       "      <td>0.546073</td>\n",
+       "      <td>0.255102</td>\n",
+       "      <td>0.366571</td>\n",
+       "      <td>0.262370</td>\n",
+       "      <td>0.366518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AIRPORT ROAD</th>\n",
-       "      <td>0.421583</td>\n",
-       "      <td>0.269137</td>\n",
-       "      <td>0.922025</td>\n",
-       "      <td>0.964743</td>\n",
+       "      <td>0.126909</td>\n",
+       "      <td>0.081018</td>\n",
+       "      <td>0.422432</td>\n",
+       "      <td>0.278873</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ALEXANDRA HILL</th>\n",
-       "      <td>0.295339</td>\n",
-       "      <td>0.320279</td>\n",
-       "      <td>0.262960</td>\n",
-       "      <td>0.320530</td>\n",
+       "      <td>0.249590</td>\n",
+       "      <td>0.289241</td>\n",
+       "      <td>0.252508</td>\n",
+       "      <td>0.307790</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ALEXANDRA NORTH</th>\n",
-       "      <td>0.260659</td>\n",
-       "      <td>0.100250</td>\n",
-       "      <td>0.215390</td>\n",
-       "      <td>0.071056</td>\n",
+       "      <td>0.156932</td>\n",
+       "      <td>0.060357</td>\n",
+       "      <td>0.186785</td>\n",
+       "      <td>0.041080</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ALJUNIED</th>\n",
@@ -662,21 +664,21 @@
       ],
       "text/plain": [
        "                 weekday_com_ent_in  weekday_com_ent_out  weekend_com_ent_in  \\\n",
-       "ADMIRALTY                  0.364968             0.471079            0.390905   \n",
-       "AIRPORT ROAD               0.421583             0.269137            0.922025   \n",
-       "ALEXANDRA HILL             0.295339             0.320279            0.262960   \n",
-       "ALEXANDRA NORTH            0.260659             0.100250            0.215390   \n",
+       "ADMIRALTY                  0.255102             0.366571            0.262370   \n",
+       "AIRPORT ROAD               0.126909             0.081018            0.422432   \n",
+       "ALEXANDRA HILL             0.249590             0.289241            0.252508   \n",
+       "ALEXANDRA NORTH            0.156932             0.060357            0.186785   \n",
        "ALJUNIED                   0.401774             0.432890            0.293779   \n",
        "\n",
        "                 weekend_com_ent_out  \n",
-       "ADMIRALTY                   0.546073  \n",
-       "AIRPORT ROAD                0.964743  \n",
-       "ALEXANDRA HILL              0.320530  \n",
-       "ALEXANDRA NORTH             0.071056  \n",
+       "ADMIRALTY                   0.366518  \n",
+       "AIRPORT ROAD                0.278873  \n",
+       "ALEXANDRA HILL              0.307790  \n",
+       "ALEXANDRA NORTH             0.041080  \n",
        "ALJUNIED                    0.342999  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +819,7 @@
        "4               0.302093            0.199284             0.215336  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
