--- a/analysis/analyzing_result_pt1.ipynb
+++ b/analysis/analyzing_result_pt1.ipynb
@@ -116,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f47a1280e80>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2d01391080>"
       ]
      },
      "execution_count": 4,
